--- a/src/routes/QuarkView.module.css
+++ b/src/routes/QuarkView.module.css
@@ -28,6 +28,7 @@
     display: flex;
     flex-direction: row;
     flex-grow: 1;
+    min-width: 0;
 }
 
 .avieboxWrap {
